  o Interactive plots can be generated via iplot
  o single sample scoring methods broken out into more modular functions
  o svdScore added. Executes Jason's SVD scoring trick and also calculates
    "all the usual" prcomp stuff.
  o Adds a `[.GeneSetDb` method so we can subset the geneSets out of a GeneSetDb
    more easily. Would still like to have a fully operational subset(gdb, ...).

CHANGES IN VERSION 0.4.x
------------------------

USER VISIBLE CHANGES

  o scoreSingleSamples now defualts to returning a melted data.frame of results
    (previously we returned a (list of) matrix of scores). `melted=FALSE`
    parameter was changed to `as.matrix=FALSE`

  o Internal MSigDB collections updated to v5.1 (as of v0.4.30).
    The major difference in v5.1 vs v5.0 seems to be an updated c7 (immunologic)
    collection, which comes on the heels of this paper:

      Compendium of Immune Signatures Identifies Conserved and Species-Specific
      Biology in Response to Inflammation
      http://www.cell.com/immunity/abstract/S1074-7613(15)00532-4

  o All methods now default to returning data.frame(s) instead of data.table(s)
    data.table is still used internally, however I understand that some people
    don't want to have them returned into their workspace.

    A global option (multiGSEA.df.return) is available for you to tweak this
    behavior, ie. set `options(multiGSEA.df.return='data.tabe')` to have
    `geneSets(gdb)` return a data.table instead of a data.frame.

  o Changed geneSetFeatureStatistics to geneSetsStats

NEW FEATURES

  o `use.treat` parameter has been added to relevant places to run the internal
    differential testing via the "treat" framework made available in limma and
    edgeR via the `treat` and `glmTreat` "pipelines," respectively. By default,
    all pipelines do not use the treat framework (but perhaps they should).

  o goseq, fry, and romer testing methods have been added.
