@@ -1,7 +1,7 @@
 Package: multiGSEA
 Type: Package
 Title: One GSEA interface to rule them all
-Version: 0.6.6
+Version: 0.6.7
 Author: Steve Lianoglou
 Maintainer: Steve Lianoglou <lianoglou.steve@gene.com>
 Description: Provides a unified interface to several gene set enrichment
@@ -63,6 +63,7 @@ Collate:
     'do.npGSEA.R'
     'do.roast.R'
     'do.romer.R'
+    'do.svdGeneSetTest.R'
     'gsea-helpers.R'
     'msigdb-broad.R'
     'msigdb-wehi.R'
